Fix menu jumping when hovering over entries

--- a/Customizable-Cinnamon/cinnamon/sass/components/menu.scss
+++ b/Customizable-Cinnamon/cinnamon/sass/components/menu.scss
@@ -29,6 +29,10 @@
   box-shadow: inset 0px 0px 0px 0px rgba(255,255,255,0);
   border: $menu-border;
   border-radius: $menu-border-radius;
+  padding-top: 7px-$border-width;
+  padding-bottom: 7px-$border-width;
+  padding-left: 7px-$border-width;
+  padding-right: 7px-$border-width;
 }
 
 .menu-favorites-button:hover {
